added testing notebook for openbb

--- a/Testing_edgartools.ipynb
+++ b/Testing_edgartools.ipynb
@@ -387,6 +387,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30b91603",
+   "metadata": {},
+   "source": [
+    "## Regarding SEC API\n",
+    "#### https://sec-api.io/\n",
+    "#### my API Key\n",
+    "#### af82be7d92bce26dff9df1b4de3329400777fe8232d6ac105222ba87cf78cb3c"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "bdff5230",
